# SREday-Texas-2026

./: .gitignore  CLAUDE.md  LICENSE  MEMORY.md  PROJECT_STATE.md  README.md  pyproject.toml  sreday-austin-2026-deck-arcade.pptx
abstract/: abstract.md  bio.md
docs/: senior-review-fixes.md  the-framework.md
hooks/: README.md
hooks/claude-code/: auto-reanchor.sh  auto-test-on-stop.sh  block-sensitive-files.sh  check-aboutme.sh  check-commit-message.sh  harvest-journal.sh  session-start.sh  validate-file.sh
hooks/git/: pre-commit  pre-push
presentations/: README.md  sreday-austin-2026-deck-arcade.pptx
tests/: README.md  conftest.py  test_abstract.py  test_event_details.py  test_gitignore_coverage.py  test_license.py  test_readme_layout.py  test_state_consistency.py
workflows/: README.md  ci.yml  e2e.yml
